--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -1,5 +1,7 @@
 // Override / set color variables
 
+//$primary : #3f51b5;
+
 
 @import 'node_modules/bootstrap/scss/bootstrap';
 @import 'node_modules/bootstrap-vue/src/index.scss';
@@ -20,4 +22,34 @@ font-weight: bold;
 .course-input{
   width: 3em;
   text-align: center;
+}
+
+.vdatetime-popup__header{
+  background: $primary !important;
+}
+
+
+.vdatetime-popup__actions__button{
+  color: $primary !important;
+}
+
+.vdatetime-calendar__month__day--selected > span > span{
+  background: $primary !important;
+}
+
+.vdatetime-time-picker__item--selected {
+  color: $primary !important;
+}
+
+.vdatetime-time-picker__list--suffix{
+  text-transform: uppercase !important;
+}
+
+.scores td{
+  position: relative;
+}
+
+.scores td span.circle-icon{
+  position: absolute;
+  top: 0;
 }
