--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -12,7 +12,7 @@ font-weight: bold;
 
 #dev-mode {
   position: fixed;
-  bottom: 0px;
+  top :0px;
   width: 400px;
   text-align: center;
   left: 50%;
